<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_marginRight="20dp"
              android:layout_marginLeft="20dp"
        >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_desc"
                android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/reg_name"
                android:textSize="20sp" />

        <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/reg_pw"
                android:textSize="20sp" />

        <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/reg_sex"
                android:textSize="20sp" />

        <RadioGroup
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1.0"
                >
            <RadioButton
                    android:id="@+id/male_radio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sex_male"
                    android:textSize="20sp"
                    android:checked="true"
                    />
            <RadioButton
                    android:id="@+id/female_radio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sex_female"
                    android:textSize="20sp"
                    />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <Button
                android:id="@+id/reg_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/reg_btn"
                android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>

